Fix for Bug 56170 "After mac goes to sleep, getting IMAP mail locks up machine".  Changed case kOTOutStateErr, so that it returns an error.  This enables us to detect when a connection is closed out from under us.